# testpkgs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/testpkgs/: __init__.py  dataset.py  plotting.py  testpkgs.py
src/testpkgs/data/: flatland.txt
tests/: test_testpkgs.py
