[tool.poetry]
name = "testpkgs"
version = "0.2.0"
description = "Calculate word count in a text file!"
authors = ["Lu Hou Yang"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.10.1"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-cov = ">=6.0.0"
jupyter = "^1.1.1"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
pydata-sphinx-theme = "^0.16.1"
python-semantic-release = {version = "^9.21.0", python = "^3.12"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"                                       # branch to make releases of
changelog_file = "CHANGELOG.md"                       # changelog file
build_command = "pip install poetry && poetry build"  # build dists    